Fixed footer on narrow mobile views

--- a/themes/gerous/assets/sass/3-modules/_footer.scss
+++ b/themes/gerous/assets/sass/3-modules/_footer.scss
@@ -42,7 +42,7 @@
   }
 
   @media (max-width: $mobile) {
-    text-align: left;
+    text-align: center;
   }
 }
 
@@ -92,7 +92,7 @@
   }
 
   @media (max-width: $mobile) {
-    justify-content: flex-start;
+    justify-content: center;
 
     .footer__navigation__item {
       margin-right:24px;
@@ -151,7 +151,7 @@
 
   @media (max-width: $mobile) {
     .footer__social__list {
-      justify-content: flex-start;
+      justify-content: center;
     }
   }
 }
@@ -178,6 +178,6 @@
   }
 
   @media (max-width: $mobile) {
-    text-align: left;
+    text-align: center;
   }
 }
